<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.donation.DonationFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/supportTextUkraine"
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@color/greys_green"
                android:textColor="@color/white"
                android:text="@string/ukraineSupportText"
                />

            <Button
                android:id="@+id/Ukraine"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:text="@string/support_ukraine"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/supportText"
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/greys_green"
            android:textColor="@color/white"
            android:text="@string/support"
            />

        <Button
            android:id="@+id/link_to_donation"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@color/greys_green"
            android:padding="20dp"
            android:text="@string/donation_page"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            />
    </LinearLayout>

    </LinearLayout>


</FrameLayout>